--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+psycopg2-binary==2.9.10
 pycodestyle==2.14.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
