feat(auth): implement login and JWT authentication to protect endpoints
- Added JWT token generation and verification in the authentication system.
- Created  dependency to extract and validate the user from the token.
- Secured sensitive endpoints with JWT-based authentication.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 PYTHONPATH=$(pwd)/src
-DB = "mysql+pymysql"
-userDB = "root"
-passwordDB = "password"
-name_serviceDB = "localhost"
-nameBD = "tidytasks"
-port = "3306"
+DB=postgresql
+USERDB=tidytasks
+PASSWORDDB=tidytasks
+NAME_SERVICEDB=localhost
+PORT=5432
+NAMEDB=tidytasks
+SECRET_KEY=devsecretkey123
