--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@ anyio==4.9.0
 astroid==3.3.11
 asyncpg==0.30.0
 autoflake==2.3.1
+bcrypt==3.2.0
 black==25.1.0
 certifi==2025.7.14
+cffi==1.17.1
 cfgv==3.4.0
 click==8.2.1
+cryptography==42.0.7
 dill==0.4.0
 distlib==0.4.0
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
@@ -32,28 +36,36 @@ mdurl==0.1.2
 mypy_extensions==1.1.0
 nodeenv==1.9.1
 packaging==25.0
+passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
 pre_commit==4.2.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pycodestyle==2.14.0
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pyflakes==3.4.0
 Pygments==2.19.2
+PyJWT==2.10.1
 pylint==3.3.7
+PyMySQL==1.0.2
 pytest==8.4.1
 pytest-asyncio==1.1.0
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.6.4
+rsa==4.9.1
 sentry-sdk==2.33.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.47.2
