feat(test): add tests, Postman collection and test documentation in README

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NAME_SERVICEDB=localhost
 PORT=5432
 NAMEDB=tidytasks
 SECRET_KEY=devsecretkey123
+ACCESS_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiI1IiwiZXhwIjoxNzUzMzcwNTQzfQ.PbLCQuiczV6-cQd-rTGGIgcrWVqRGX0daxFrGs3pURU
